--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ li a:hover {
   <li><a href="gallery.html">Gallery</a></li>
   <li><a href="about.html">About</a></li>
 </ul>
-<img src="img\pic.jpg" style="width:100%;height:93vh;">
+<img src="images\pic.jpg" style="width:100%;height:93vh;">
 
 <br><br><h2 style= "text-align:center;font-size:29px;color:#CD5C5C;">Our Story</h2><br><br>
 
